HTML refactor. Deleted unnecessary divs, fixed spacing and tabs

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
   font-family: 'Rubik', sans-serif;
 }
 
-.main {
+body {
   align-items: stretch;
   display: flex;
   height: 100vh;
